2001-08-03  Richard Henderson  <rth@redhat.com>

	* except.c (collect_one_action_chain): Add an explicit cleanup
	action if regions surrounding a catch were encoded entirely
	within the call-site entry.

2001-08-03  Stephane Carrez  <Stephane.Carrez@worldnet.fr>

	* config/m68hc11/t-m68hc11-gas (T_CPPFLAGS): Add _ctor and _dtor.
	* config/m68hc11/larith.asm (_exit): Split in several sub-sections
	merged by linker script to get a final _exit().
	(__do_global_dtors): New for destructor handling in specific exit
	section.
	(__do_global_ctors): New for constructors in specific install section.
	(__map_data_section): Map data sections before running constructors.
	* config/m68hc11/m68hc11.h (INT_ASM_OP): Define to use .word.
	(CTORS_SECTION_ASM_OP): Define to put in readonly section.
	(DTORS_SECTION_ASM_OP): Likewise.
	(CTORS_SECTION_FUNCTION): Define to force a reference to
	__do_global_ctors.
	(DTORS_SECTION_FUNCTION): Likewise for __do_global_dtors.

2001-08-03  Ulrich Weigand  <uweigand@de.ibm.com>
 
 	* config.gcc (s390-*-linux*, s390x-*-linux*): Added.
 	* doc/install.texi: Add s390 and s390x targets.
 	* doc/invoke.texi: Add s390 and s390x target options.
 	* doc/md.texi: Add s390 and s390x extra constraints.
 	* config/s390/s390.c: New. Subroutines for code generation.
 	* config/s390/s390.h: New. Definitions for S/390.
 	* config/s390/s390-protos.h: New. Prototypes.
 	* config/s390/linux.h: New. Definitions for Linux for S/390.
 	* config/s390/linux64.h: New. Definitions for Linux for zSeries.
 	* config/s390/t-linux: New. Makefile fragment.
 	* config/s390/s390.md: New. Machine description for S/390 and zSeries.
 	* config/s390/xm-390.h: New. Host definitions for S/390.
 	* config/s390/xm-390x.h: New. Host definitions for zSeries.
 	* config/s390/fixdfdi.h: New. Fix L_fix*di.
 
2001-08-03  Neil Booth  <neil@cat.daikokuya.demon.co.uk>

	* cpplex.c (parse_string): Warn once per string.
	* cpplib.c (_cpp_do_file_change): Call hook correctly.
