@@ -1,3 +1,7 @@
+2001-08-03  Zack Weinberg  <zackw@stanford.edu>
+
+	* gcc.dg/bconstp-1.c: New test.
+
 2001-08-02  Nathan Sidwell  <nathan@codesourcery.com>
 
 	Remove -fhonor-std.
